--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "graphql": "^15.5.0",
     "knex": "<0.20.0",
+    "path-to-regexp": "^6.2.0",
     "pg": "^8.5.1",
     "sqlite3": "5.0.0",
     "strapi": "3.4.5",
