--- a/api/subject/models/subject.settings.json
+++ b/api/subject/models/subject.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "subjects",
   "info": {
-    "name": "subject"
+    "name": "subject",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -15,9 +16,12 @@
       "required": true,
       "unique": true
     },
-    "word2subj": {
-      "collection": "medi-data",
-      "via": "which_subject"
+    "subject_chn": {
+      "type": "string"
+    },
+    "medis": {
+      "via": "subj",
+      "collection": "medi-data"
     }
   }
 }
