没什么要说的

--- a/api/medi-data/models/medi-data.settings.json
+++ b/api/medi-data/models/medi-data.settings.json
@@ -26,8 +26,8 @@
       "via": "medis"
     },
     "relfr": {
-      "via": "leftid",
-      "collection": "rela"
+      "collection": "rela",
+      "via": "leftid"
     }
   }
 }
