增加词根词缀

--- a/api/medi-data/models/medi-data.settings.json
+++ b/api/medi-data/models/medi-data.settings.json
@@ -28,6 +28,10 @@
     "relfr": {
       "collection": "rela",
       "via": "leftid"
+    },
+    "which_root": {
+      "via": "medi_word",
+      "collection": "etym"
     }
   }
 }
